@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.antipro</groupId>
-    <artifactId>CodeArea</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>code-area</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -70,6 +70,34 @@
                 <version>3.8.1</version>
                 <configuration>
                     <release>21</release>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.base/com.sun.javafx=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.base/com.sun.javafx.collections=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.base/com.sun.javafx.binding=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.javafx.scene.input=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.javafx.tk=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.javafx.util=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.javafx.scene=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.javafx.application=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control.behavior=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control.inputmap=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control.skin.resources=com.antipro.codearea</arg>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.controls/com.sun.javafx.scene.control.skin=com.antipro.codearea</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
